[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/gui/overlay_buttons/solar_overlay_button.png" type="Texture" id=1]
[ext_resource path="res://assets/images/gui/overlay_buttons/battery_overlay_button.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gui/overlay_buttons/scanner_overlay_button.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/overlay_buttons/destroy_overlay_button.png" type="Texture" id=4]
[ext_resource path="res://src/gui/overlay_button_panel.gd" type="Script" id=5]
[ext_resource path="res://assets/images/gui/overlay_buttons/run_power_line_button.png" type="Texture" id=6]
[ext_resource path="res://assets/images/gui/overlay_buttons/build_constructor_bot.png" type="Texture" id=7]
[ext_resource path="res://addons/scaffolder/src/gui/level_button/sprite_modulation_button.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="OverlayButtonPanel" type="Node2D"]
visible = false
modulate = Color( 1, 1, 1, 0.6 )
z_index = 4
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Buttons" type="Node2D" parent="."]

[node name="RunPowerLine" parent="Buttons" instance=ExtResource( 8 )]
position = Vector2( -32, 16 )
scale = Vector2( 2, 2 )
screen_radius = null
texture = ExtResource( 6 )
alpha_multiplier = 0.75

[node name="Battery" parent="Buttons" instance=ExtResource( 8 )]
position = Vector2( 0, 16 )
scale = Vector2( 2, 2 )
screen_radius = null
texture = ExtResource( 2 )
alpha_multiplier = 0.75

[node name="Scanner" parent="Buttons" instance=ExtResource( 8 )]
position = Vector2( 32, 16 )
scale = Vector2( 2, 2 )
screen_radius = null
texture = ExtResource( 3 )
alpha_multiplier = 0.75

[node name="Solar" parent="Buttons" instance=ExtResource( 8 )]
position = Vector2( -32, 48 )
scale = Vector2( 2, 2 )
screen_radius = null
texture = ExtResource( 1 )
alpha_multiplier = 0.75

[node name="ConstructorBot" parent="Buttons" instance=ExtResource( 8 )]
position = Vector2( 0, 48 )
scale = Vector2( 2, 2 )
screen_radius = null
texture = ExtResource( 7 )
alpha_multiplier = 0.75

[node name="Destroy" parent="Buttons" instance=ExtResource( 8 )]
position = Vector2( 32, 48 )
scale = Vector2( 2, 2 )
screen_radius = null
texture = ExtResource( 4 )
alpha_multiplier = 0.75
